@@ -204,6 +204,7 @@ struct FontConfiguration
 struct PluginConfiguration
 {
     bool enable_hot_reloading;
+    std::string allowed_hosts;
 };
 
 enum SORT
